added change password function

--- a/UniFind/client/accounts/Register.html
+++ b/UniFind/client/accounts/Register.html
@@ -1,7 +1,7 @@
 <template name="Register">
   <div class="container">
     <div class="row">
-      <h4 class="text-center">Register Account</h4>
+      <h4 class="text-center grey-text text-darken-2">Register Account</h4>
       <form onSubmit={this.onSubmit} class="col offset-s4 s4 registerForm">
         <div class="row">
           <div class="input-field col s12">
