--- a/UniFind/client/accounts/Login.html
+++ b/UniFind/client/accounts/Login.html
@@ -1,7 +1,7 @@
 <template name="Login">
   <div class="container">
     <div class="row">
-      <h4 class="text-center">Login</h4>
+      <h4 class="text-center grey-text text-darken-2">Login</h4>
       <form onSubmit={this.onSubmit} class="col offset-s4 s4 loginForm">
         <div class="row">
           <div class="input-field col s12">
@@ -19,6 +19,10 @@
           <button class="waves-effect waves-light btn btn-block" type="submit">Submit</button>
         </div>
       </form>
+    </div>
+    <div class="row">
+      <h6 class="text-center"><a href="#" class="forget-pwd"><span class="grey-text text-darken-2">Forget password?</span></a></h6>
+      <h6 class="text-center"><a href="/register"><span class="grey-text text-darken-2">Register</span></a></h6>
     </div>
   </div>
 </template>
