added notification time limit and modified mobile styling

--- a/UniFind/client/accounts/Login.html
+++ b/UniFind/client/accounts/Login.html
@@ -2,15 +2,15 @@
   <div class="container">
     <div class="row">
       <h4 class="text-center grey-text text-darken-2">Login</h4>
-      <form onSubmit={this.onSubmit} class="col offset-s4 s4 loginForm">
+      <form onSubmit={this.onSubmit} class="col offset-m4 m4 offset-s2 s8 loginForm">
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="email" type="email" class="validate" />
             <label htmlFor="email" data-error="Invalid email">Email</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="password" type="password" class="validate" />
             <label htmlFor="password">Password</label>
           </div>
