--- a/UniFind/client/accounts/Register.html
+++ b/UniFind/client/accounts/Register.html
@@ -2,21 +2,21 @@
   <div class="container">
     <div class="row">
       <h4 class="text-center grey-text text-darken-2">Register Account</h4>
-      <form onSubmit={this.onSubmit} class="col offset-s4 s4 registerForm">
+      <form onSubmit={this.onSubmit} class="col offset-m4 m4 offset-s2 s8 registerForm">
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="email" type="email" class="validate" />
             <label htmlFor="email" data-error="Invalid email">Email</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="password" type="password" class="validate" />
             <label htmlFor="password">Password</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="confirmPassword" type="password" class="validate" />
             <label htmlFor="confirmPassword">Confirm Password</label>
           </div>
