--- a/UniFind/client/notification/Notification.html
+++ b/UniFind/client/notification/Notification.html
@@ -2,23 +2,27 @@
 
   <section class="posts">
       {{#if Template.subscriptionsReady}}
-      <div class="row">
-        <div class="col s12">
+      <div class="container paddingTop">
+
           {{#if postsCount}}
-            <div class="row paddingLeft">
+            <div class="row">
               <h5 class="light">Here are some new matched results for you!</h5>
             </div>
-            {{#each posts}}
-              <div class="col m3">
-                {{> ThumbnailPostFound}}
-              </div>
-            {{/each}}
+
+            <div class="row">
+              {{#each posts}}
+                <div class="col s12 m4">
+                  {{> ThumbnailPostFound}}
+                </div>
+              {{/each}}
+            </div>
+
           {{else}}
-            <div class="row paddingLeft">
+            <div class="row">
               <h5 class="light">There isn't any new matched post yet, please wait for further notifications!</h5>
             </div>
           {{/if}}
-        </div>
+
       </div>
       {{else}}
         <div class="center-align btns-padding">
