added footer content and modified registration process

--- a/UniFind/client/accounts/ResetPwd.html
+++ b/UniFind/client/accounts/ResetPwd.html
@@ -15,7 +15,7 @@
       </form>
     </div>
     <div class="row">
-      <h6 class="text-center"><span class="grey-text text-darken-2 light">Have an account already? </span><a href="/login"><span class="red-text text-darken-2">LOGIN</span></a></h6>
+      <h6 class="text-center"><span class="grey-text text-darken-2 light">Already have an account? </span><a href="/login"><span class="red-text text-darken-2">LOGIN</span></a></h6>
     </div>
   </div>
 </template>
