--- a/UniFind/client/accounts/Register.html
+++ b/UniFind/client/accounts/Register.html
@@ -4,7 +4,13 @@
       <h4 class="text-center grey-text text-darken-2">Register Account</h4>
       <form onSubmit={this.onSubmit} class="col offset-m4 m4 offset-s2 s8 registerForm">
         <div class="row">
-          <div class="input-field">
+          <div class="input-field col s12">
+            <input id="username" type="text" class="validate" />
+            <label htmlFor="username">Username</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
             <input id="email" type="email" class="validate" />
             <label htmlFor="email" data-error="Invalid email">Email</label>
           </div>
@@ -44,7 +50,7 @@
       </div>
     </div>-->
     <div class="row">
-      <h6 class="text-center"><span class="grey-text text-darken-2 light">Have an account already? </span><a href="/login"><span class="red-text text-darken-2">LOGIN</span></a></h6>
+      <h6 class="text-center"><span class="grey-text text-darken-2 light">Already have an account? </span><a href="/login"><span class="red-text text-darken-2">LOGIN</span></a></h6>
     </div>
   </div>
 </template>
