fixed bugs after deployment

--- a/UniFind/client/footer/About.html
+++ b/UniFind/client/footer/About.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h4 class="teal-text">About</h4>
     <div class="center-align">
-      <img src="imgs/Unifind.png" width="585" height="217">
+      <img src="imgs/Unifind.png" width="585" height="217" class="responsive-img">
     </div>
     <p class="profile-text light grey-text text-darken-2">
       It is fairly common for students to lose their stuff while in campus. No matter it is their laptop, handphone, wallet, or even just a water bottle, they certainly want the item back. Unfortunately, current solutions aren't really satisfactory. Team Hakuna matata is here to provide our own solution.
