--- a/UniFind/client/accounts/Register.html
+++ b/UniFind/client/accounts/Register.html
@@ -4,13 +4,13 @@
       <h4 class="text-center grey-text text-darken-2">Register Account</h4>
       <form onSubmit={this.onSubmit} class="col offset-m4 m4 offset-s2 s8 registerForm">
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="username" type="text" class="validate" />
             <label htmlFor="username">Username</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="email" type="email" class="validate" />
             <label htmlFor="email" data-error="Invalid email">Email</label>
           </div>
