--- a/UniFind/client/accounts/ResetPwd.html
+++ b/UniFind/client/accounts/ResetPwd.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <h4 class="text-center grey-text text-darken-2">Reset Password</h4>
-      <form onSubmit={this.onSubmit} class="col offset-s4 s4 loginForm">
+      <form onSubmit={this.onSubmit} class="col offset-s4 s4 resetPwdForm">
         <div class="row">
           <div class="input-field col s12">
             <input id="email" type="email" class="validate" />
