--- a/UniFind/client/notification/Notification.html
+++ b/UniFind/client/notification/Notification.html
@@ -12,7 +12,11 @@
             <div class="row">
               {{#each posts}}
                 <div class="col s12 m4">
-                  {{> ThumbnailPostFound}}
+                  {{#if isPostFound}}
+                    {{> ThumbnailPostFound}}
+                  {{else}}
+                    {{> ThumbnailPostLost}}
+                  {{/if}}
                 </div>
               {{/each}}
             </div>
