fixed bugs with some methods

--- a/UniFind/client/accounts/Login.html
+++ b/UniFind/client/accounts/Login.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
       <h6 class="text-center"><span class="grey-text text-darken-2 light">Create account? </span><a href="/register"><span class="red-text text-darken-2">REGISTER</span></a></h6>
-      <h6 class="text-center"><span class="grey-text text-darken-2 light">Forgot your password? </span><a href="/reset-password" class="forget-pwd"><span class="red-text text-darken-2">RESET PASSWORD</span></a></h6>
+      <!--<h6 class="text-center"><span class="grey-text text-darken-2 light">Forgot your password? </span><a href="/reset-password" class="forget-pwd"><span class="red-text text-darken-2">RESET PASSWORD</span></a></h6>-->
     </div>
   </div>
 </template>
