--- a/UniFind/client/settings/ChangePassword.html
+++ b/UniFind/client/settings/ChangePassword.html
@@ -2,21 +2,21 @@
   <div class="container">
     <div class="row">
       <h4 class="text-center grey-text text-darken-2">Change Password</h4>
-      <form onSubmit={this.onSubmit} class="col offset-s4 s4 changePasswordForm">
+      <form onSubmit={this.onSubmit} class="col offset-m4 m4 offset-s2 s8 changePasswordForm">
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="oldPassword" type="password" class="validate" />
             <label htmlFor="oldPassword">Old Password</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="newPassword" type="password" class="validate" />
             <label htmlFor="newPassword">New Password</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field">
             <input id="confirmNewPassword" type="password" class="validate" />
             <label htmlFor="confirmNewPassword">Confirm New Password</label>
           </div>
