--- a/UniFind/client/chats/Inbox.html
+++ b/UniFind/client/chats/Inbox.html
@@ -41,7 +41,7 @@
                   <div class="row">
                     <div class="col s4 m3">
                       {{#if imageIsUploaded item}}
-                        <img src="{{imageurl item store="thumbs"}}" class="responsive-img">
+                        <img src="{{imageurl item store="images"}}" class="responsive-img">
                       {{else}}
                         <img src="imgs/UnifindThumb.png" class="responsive-img">
                       {{/if}}
